--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset=UTF-8/>
   <title>Coral reef</title>
 </head>
 <body>
   <h1>Coral reef</h1>
-  <p>A <em>coral reef</em> is an underwater <a href="https://en.wikipedia.org/wiki/Ecosystem"> ecosystem </a> characterized by reef-building corals. Reefs are formed of colonies of coral polyps held together by calcium carbonate. Most coral reefs are built from stony corals, whose polyps cluster in groups.
+  <p>A <em>coral reef</em> is an underwater <a href="https://en.wikipedia.org/wiki/Ecosystem"> ecosystem </a> characterized by reef-building <a href="https://en.wikipedia.org/wiki/Coral">corals</a>. Reefs are formed of colonies of coral polyps held together by calcium carbonate. Most coral reefs are built from stony corals, whose polyps cluster in groups.
 
-Coral belongs to the class Anthozoa in the animal phylum Cnidaria, which includes sea anemones and jellyfish. Unlike sea anemones, corals secrete hard carbonate exoskeletons that support and protect the coral. Most reefs grow best in warm, shallow, clear, sunny and agitated water. Coral reefs first appeared 485 million years ago, at the dawn of the Early Ordovician, displacing the microbial and sponge reefs of the Cambrian.[1]
+  Coral belongs to the class Anthozoa in the animal phylum Cnidaria, which includes sea anemones and jellyfish. Unlike sea anemones, corals secrete hard carbonate exoskeletons that support and protect the coral. Most reefs grow best in warm, shallow, clear, sunny and agitated water. Coral reefs first appeared 485 million years ago, at the dawn of the Early Ordovician, displacing the microbial and sponge reefs of the Cambrian.[1]
 
-Sometimes called rainforests of the sea,[2] shallow coral reefs form some of Earth's most diverse ecosystems. They occupy less than 0.1% of the world's ocean area, about half the area of France, yet they provide a home for at least 25% of all marine species,[3][4][5][6] including fish, mollusks, worms, crustaceans, echinoderms, sponges, tunicates and other cnidarians.[7] Coral reefs flourish in ocean waters that provide few nutrients. They are most commonly found at shallow depths in tropical waters, but deep water and cold water coral reefs exist on smaller scales in other areas.
+  Sometimes called rainforests of the sea,[2] shallow coral reefs form some of Earth's most diverse ecosystems. They occupy less than 0.1% of the world's ocean area, about half the area of <span id="location" class="country">France</span>, yet they provide a home for at least 25% of all marine species,[3][4][5][6] including fish, mollusks, worms, crustaceans, echinoderms, sponges, tunicates and other cnidarians.[7] Coral reefs flourish in ocean waters that provide few nutrients. 
+  
+  They are most commonly found at shallow depths in tropical waters, but deep water and cold water coral reefs exist on smaller scales in other areas.
 
-Coral reefs have declined by 50% since 1950, partly because they are sensitive to water conditions.[8] They are under threat from excess nutrients (nitrogen and phosphorus), rising temperatures, oceanic acidification, overfishing (e.g., from blast fishing, cyanide fishing, spearfishing on scuba), sunscreen use,[9] and harmful land-use practices, including runoff and seeps (e.g., from injection wells and cesspools).[10][11][12]
+  Coral reefs have declined by 50% since <time>1950</time>, partly because they are sensitive to water conditions.[8] They are under threat from excess nutrients (nitrogen and phosphorus), rising temperatures, oceanic acidification, overfishing <span id="e.g">(e.g., from blast fishing, cyanide fishing, spearfishing on scuba)</span>, sunscreen use,[9] and harmful land-use practices, including runoff and seeps <span id="e.g">(e.g., from injection wells and cesspools)</span>.[10][11][12]
 
-Coral reefs deliver ecosystem services for tourism, fisheries and shoreline protection. The annual global economic value of coral reefs has been estimated at anywhere from US$30–375 billion (1997 and 2003 estimates)[13][14] to US$2.7 trillion (a 2020 estimate)[15] to US$9.9 trillion (a 2014 estimate).[16] </p>
+  Coral reefs deliver ecosystem services for tourism, fisheries and shoreline protection. The annual global economic value of coral reefs has been estimated at anywhere from US$30–375 billion (<time>1997</time> and <time>2003</time> estimates)[13][14] to US$2.7 trillion (a <time>2020</time> estimate)[15] to US$9.9 trillion (a <time>2014</time> estimate).[16] </p>
 </body>
 </html>
