--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   
     They are most commonly found at shallow depths in tropical waters, but deep water and cold water coral reefs exist on smaller scales in other areas.<hr/>
 
-    Coral reefs have declined by <span id="percentage">50%</span> since <time>1950</time>, partly because they are sensitive to water conditions.[8] They are under threat from excess nutrients (nitrogen and phosphorus), rising temperatures, oceanic acidification, overfishing <span id="e.g">(e.g., from blast fishing, cyanide fishing, spearfishing on scuba)</span>, sunscreen use,[9] and harmful land-use practices, including runoff and seeps <span id="e.g">(e.g., from injection wells and cesspools)</span>.[10][11][12]<hr/>
+    Coral reefs have declined by <span id="percentage">50%</span> since <time>1950</time>, partly because they are sensitive to water conditions.[8] They are under threat from excess nutrients (nitrogen and phosphorus), rising temperatures, oceanic acidification, overfishing <span id="e.g">(e.g., from blast fishing, cyanide fishing, spearfishing on scuba)</span>, sunscreen use,[9] and harmful land-use practices, including runoff and seeps <span id="e.g">(e.g., from injection wells and cesspools)</span>.[10][11][12]</p>
 
-    Coral reefs deliver ecosystem services for tourism, fisheries and shoreline protection. The annual global economic value of coral reefs has been estimated at anywhere from US$30–375 billion (<time>1997</time> and <time>2003</time> estimates)[13][14] to US$2.7 trillion (a <time>2020</time> estimate)[15] to US$9.9 trillion (a <time>2014</time> estimate).[16] </p>
+    <p>Coral reefs deliver ecosystem services for tourism, fisheries and shoreline protection. The annual global economic value of coral reefs has been estimated at anywhere from US$30–375 billion (<time>1997</time> and <time>2003</time> estimates)[13][14] to US$2.7 trillion (a <time>2020</time> estimate)[15] to US$9.9 trillion (a <time>2014</time> estimate).[16] </p>
   </article>
 </body>
 </html>
