--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </article>
    <div>
      <ol>
-       <li><a href="formation.html">Formation</a></il>
+      <li><a href="Formation.html">Formation</a></il>
+      <li><a href="types.html">Types</a></li> 
      </ol>
    </div>
   </body>
