--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
    <h1>Coral reef</h1>
-   <a href="https://en.wikipedia.org/wiki/Coral_reef">From Wikipedia, the free encyclopedia</a>
+   <a href="https://en.wikipedia.org/wiki/Coral_reef">From Wikipedia, the free encyclopedia</a><hr/>
    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Blue_Linckia_Starfish.JPG/800px-Blue_Linckia_Starfish.JPG" alt="Coral reef" width="250" height="333"> 
    <article>
      <p>A <strong><em>coral reef</em></strong> is an underwater <a href="https://en.wikipedia.org/wiki/Ecosystem"> ecosystem </a> characterized by reef-building <a href="https://en.wikipedia.org/wiki/Coral">corals</a>. Reefs are formed of colonies of coral polyps held together by calcium carbonate. <strong>Most coral reefs are built from stony corals, whose polyps cluster in groups</strong>.</p>
@@ -21,13 +21,13 @@
 
       <p>Coral reefs deliver ecosystem services for tourism, fisheries and shoreline protection. The annual global economic value of coral reefs has been estimated at anywhere from US$30–375 billion (<time>1997</time> and <time>2003</time> estimates)[13][14] to US$2.7 trillion (a <time>2020</time> estimate)[15] to US$9.9 trillion (a <time>2014</time> estimate).[16] </p>
     </article>
-   <div>
+   <nav id="menu">
      <ol>
       <li><a href="Formation.html">Formation</a></il>
       <li><a href="Types.html">Types</a></li>
       <li><a href="Zones.html">Zones</a></li>
-     <li>a<ol><li>a<li></ol></li>
+      <li><a href="Locations.html">Locations</a></li>
      </ol>
-   </div>
+   </nav>
   </body>
 </html>
