--- a/Formation.html
+++ b/Formation.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
   <html>
     <head>
-      <meta chartype="UTF-8"/>
+      <meta charset="UTF-8"/>
       <title>Formation of Coral reef</title>
     </head>  
     <body>
