--- a/Formation.html
+++ b/Formation.html
@@ -13,6 +13,8 @@
         <figure>
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Atoll_forming-volcano.png/163px-Atoll_forming-volcano.png">
           <figcaption>Darwin's theory starts with a volcanic island which becomes extinct</figcaption>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Atoll_forming-Fringing_reef.png/180px-Atoll_forming-Fringing_reef.png">
+					<figcaption>As the island and ocean floor subside, coral growth builds a fringing reef, often including a shallow lagoon between the land and the main reef. </figcaption>
         </figure>
       </article>
     </body>         
