--- a/Formation.html
+++ b/Formation.html
@@ -11,10 +11,14 @@
         In The Structure and Distribution of Coral Reefs,[18] Charles Darwin set out his theory of the formation of atoll reefs, an idea he conceived during the voyage of the Beagle. He theorized that uplift and subsidence of Earth's crust under the oceans formed the atolls.[19] Darwin set out a sequence of three stages in atoll formation. A fringing reef forms around an extinct volcanic island as the island and ocean floor subside. As the subsidence continues, the fringing reef becomes a barrier reef and ultimately an atoll reef. 
         </p>
         <figure>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Atoll_forming-volcano.png/163px-Atoll_forming-volcano.png">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Atoll_forming-volcano.png/163px-Atoll_forming-volcano.png" alt="">
           <figcaption>Darwin's theory starts with a volcanic island which becomes extinct</figcaption>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Atoll_forming-Fringing_reef.png/180px-Atoll_forming-Fringing_reef.png">
-					<figcaption>As the island and ocean floor subside, coral growth builds a fringing reef, often including a shallow lagoon between the land and the main reef. </figcaption>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Atoll_forming-Fringing_reef.png/180px-Atoll_forming-Fringing_reef.png" alt="">
+	  <figcaption>As the island and ocean floor subside, coral growth builds a fringing reef, often including a shallow lagoon between the land and the main reef. </figcaption>
+	  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/Atoll_forming-Barrier_reef.png/180px-Atoll_forming-Barrier_reef.png" alt="">
+          <figcaption>As the subsidence continues, the fringing reef becomes a larger barrier reef further from the shore with a bigger and deeper lagoon inside. </figcaption> 
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Atoll_forming-Atoll.png/180px-Atoll_forming-Atoll.png">
+          <figcaption>Ultimately, the island sinks below the sea, and the barrier reef becomes an atoll enclosing an open lagoon. </figcaption>
         </figure>
       </article>
     </body>         
