--- a/Formation.html
+++ b/Formation.html
@@ -6,6 +6,7 @@
     </head>  
     <body>
       <article>
+				<h1>Formation</h1>
 				<section id="intro">	      
         	<p>Most coral reefs were formed after the Last Glacial Period when melting ice caused sea level to rise and flood continental shelves. Most coral reefs are less than 10,000 years old. As communities established themselves, the reefs grew upwards, pacing rising sea levels. Reefs that rose too slowly could become drowned, without sufficient light.[17] Coral reefs are found in the deep sea away from continental shelves, around oceanic islands and atolls. The majority of these islands are volcanic in origin. Others have tectonic origins where plate movements lifted the deep ocean floor.</p>
 
@@ -23,7 +24,18 @@
           	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Atoll_forming-Atoll.png/180px-Atoll_forming-Atoll.png">
           	<figcaption>Ultimately, the island sinks below the sea, and the barrier reef becomes an atoll enclosing an open lagoon. </figcaption>
         	</figure>
-				</section>				
+				</section>		
+				<section>
+					<p>Darwin predicted that underneath each lagoon would be a bedrock base, the remains of the original volcano.[20] Subsequent research supported this hypothesis. Darwin's theory followed from his understanding that coral polyps thrive in the tropics where the water is agitated, but can only live within a limited depth range, starting just below low tide. Where the level of the underlying earth allows, the corals grow around the coast to form fringing reefs, and can eventually grow to become a barrier reef. </p>
+					<p>Where the bottom is rising, fringing reefs can grow around the coast, but coral raised above sea level dies. If the land subsides slowly, the fringing reefs keep pace by growing upwards on a base of older, dead coral, forming a barrier reef enclosing a lagoon between the reef and the land. A barrier reef can encircle an island, and once the island sinks below sea level a roughly circular atoll of growing coral continues to keep up with the sea level, forming a central lagoon. Barrier reefs and atolls do not usually form complete circles but are broken in places by storms. Like sea level rise, a rapidly subsiding bottom can overwhelm coral growth, killing the coral and the reef, due to what is called coral drowning.[22] Corals that rely on zooxanthellae can die when the water becomes too deep for their symbionts to adequately photosynthesize, due to decreased light exposure.[23]</p>
+					<p>The two main variables determining the geomorphology, or shape, of coral reefs are the nature of the substrate on which they rest, and the history of the change in sea level relative to that substrate. </p>
+					<p>The approximately 20,000-year-old Great Barrier Reef offers an example of how coral reefs formed on continental shelves. Sea level was then 120 m (390 ft) lower than in the 21st century.[24][25] As sea level rose, the water and the corals encroached on what had been hills of the Australian coastal plain. By 13,000 years ago, sea level had risen to 60 m (200 ft) lower than at present, and many hills of the coastal plains had become continental islands. As sea level rise continued, water topped most of the continental islands. The corals could then overgrow the hills, forming cays and reefs. Sea level on the Great Barrier Reef has not changed significantly in the last 6,000 years.[25] The age of living reef structure is estimated to be between 6,000 and 8,000 years.[26] Although the Great Barrier Reef formed along a continental shelf, and not around a volcanic island, Darwin's principles apply. Development stopped at the barrier reef stage, since Australia is not about to submerge. It formed the world's largest barrier reef, 300–1,000 m (980–3,280 ft) from shore, stretching for 2,000 km (1,200 mi).[27]</p>
+					<p>Healthy tropical coral reefs grow horizontally from 1 to 3 cm (0.39 to 1.18 in) per year, and grow vertically anywhere from 1 to 25 cm (0.39 to 9.84 in) per year; however, they grow only at depths shallower than 150 m (490 ft) because of their need for sunlight, and cannot grow above sea level.[28]</p>
+					<figure>
+						<img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Coral_atoll_formation_animation.gif" alt="">
+						<figcaption>A fringing reef can take ten thousand years to form, and an atoll can take up to 30 million years.[21]</figcaption>
+					</figure>
+				</section>
       </article>
     </body>         
   </html>
