--- a/Formation.html
+++ b/Formation.html
@@ -5,10 +5,11 @@
       <title>Formation of Coral reef</title>
     </head>  
     <body>
+      <h1>Formation</h1><hr/>
       <article>
-				<h1>Formation</h1>
+				
 				<section id="intro">	      
-        	<p>Most coral reefs were formed after the Last Glacial Period when melting ice caused sea level to rise and flood continental shelves. Most coral reefs are less than 10,000 years old. As communities established themselves, the reefs grew upwards, pacing rising sea levels. Reefs that rose too slowly could become drowned, without sufficient light.[17] Coral reefs are found in the deep sea away from continental shelves, around oceanic islands and atolls. The majority of these islands are volcanic in origin. Others have tectonic origins where plate movements lifted the deep ocean floor.</p>
+          <p><strong>Most coral reefs were formed after the Last Glacial Period</strong> when melting ice caused sea level to rise and flood continental shelves. Most coral reefs are less than 10,000 years old. As communities established themselves, the reefs grew upwards, pacing rising sea levels. Reefs that rose too slowly could become drowned, without sufficient light.[17] Coral reefs are found in the deep sea away from continental shelves, around oceanic islands and atolls. The majority of these islands are volcanic in origin. Others have tectonic origins where plate movements lifted the deep ocean floor.</p>
 
         	<p>In The Structure and Distribution of Coral Reefs,[18] Charles Darwin set out his theory of the formation of atoll reefs, an idea he conceived during the voyage of the Beagle. He theorized that uplift and subsidence of Earth's crust under the oceans formed the atolls.[19] Darwin set out a sequence of three stages in atoll formation. A fringing reef forms around an extinct volcanic island as the island and ocean floor subside. As the subsidence continues, the fringing reef becomes a barrier reef and ultimately an atoll reef. </p>
         	</p>
@@ -36,6 +37,12 @@
 						<figcaption>A fringing reef can take ten thousand years to form, and an atoll can take up to 30 million years.[21]</figcaption>
 					</figure>
 				</section>
+      </article>
+      <h2>Material</h2>
+      <article>
+        <section>
+          <p>As the name implies, coral reefs are made up of coral skeletons from mostly intact coral colonies. As other chemical elements present in corals become incorporated into the calcium carbonate deposits, aragonite is formed. However, shell fragments and the remains of coralline algae such as the green-segmented genus Halimeda can add to the reef's ability to withstand damage from storms and other threats. Such mixtures are visible in structures such as Eniwetok Atoll.[29]</p>
+        </section>
       </article>
     </body>         
   </html>
