--- a/Types.html
+++ b/Types.html
@@ -5,7 +5,7 @@
 		<title>Types of coral reefs</title>
 	</head>
 	<body>
-		<h1>Types</h1>
+		<h1>Types</h1><hr/>
 		<header>
 			<section id="intro">
 			<p>Since Darwin's identification of the three classical reef formations – the fringing reef around a volcanic island becoming a barrier reef and then an atoll[30] – scientists have identified further reef types. While some sources find only three,[31][32] Thomas and Goudie list four "principal large-scale coral reef types" – the fringing reef, barrier reef, atoll and table reef[33] – while Spalding et al. list five "main types" – the fringing reef, barrier reef, atoll, "bank or platform reef" and patch reef.[34]</p>
