--- a/Locations.html
+++ b/Locations.html
@@ -30,7 +30,7 @@
             <li>The world's southernmost coral reef is at Lord Howe Island, in the Pacific Ocean off the east coast of Australia.</li>
           </ul>
           <fogure>
-            <imd src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Coral_reef_locations.jpg/450px-Coral_reef_locations.jpg" alt=""/>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Coral_reef_locations.jpg/450px-Coral_reef_locations.jpg" alt="">
             <figcaption>Locations of coral reefs</figcaption>  
           </figure>
       </article>
