--- a/Zones.html
+++ b/Zones.html
@@ -6,8 +6,12 @@
     </head>
     <body>
       <h1>Zones</h1><hr/>
-      
-
+      <section>
+        <figure>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Coral_reef_diagram.jpg/450px-Coral_reef_diagram.jpg" alt="">
+          <figcaption>The three major zones of a coral reef: the fore reef, reef crest, and the back reef</figcaption>
+        <figure>
+      </section>
       <section id="intro">    
         <p>Coral reef ecosystems contain distinct zones that host different kinds of habitats. Usually, three major zones are recognized: the fore reef, reef crest, and the back reef (frequently referred to as the reef lagoon). </p>
         <p>The three zones are physically and ecologically interconnected. Reef life and oceanic processes create opportunities for the exchange of seawater, sediments, nutrients and marine life. </p>
@@ -17,12 +21,12 @@
       </section>
       <section>
         <article>
-          <p><strong>The reef surface</strong>is the shallowest part of the reef. It is subject to surge and tides. When waves pass over shallow areas, they shoal, as shown in the adjacent diagram. This means the water is often agitated. These are the precise condition under which corals flourish. The light is sufficient for photosynthesis by the symbiotic zooxanthellae, and agitated water brings plankton to feed the coral. </p>
-          <p><strong>The off-reef floor</strong>is the shallow sea floor surrounding a reef. This zone occurs next to reefs on continental shelves. Reefs around tropical islands and atolls drop abruptly to great depths and do not have such a floor. Usually sandy, the floor often supports seagrass meadows which are important foraging areas for reef fish. </p>
-          <p><strong>The reef drop-off </strong>is, for its first 50 m, habitat for reef fish who find shelter on the cliff face and plankton in the water nearby. The drop-off zone applies mainly to the reefs surrounding oceanic islands and atolls. </p>
+          <p><strong>The reef surface</strong> is the shallowest part of the reef. It is subject to surge and tides. When waves pass over shallow areas, they shoal, as shown in the adjacent diagram. This means the water is often agitated. These are the precise condition under which corals flourish. The light is sufficient for photosynthesis by the symbiotic zooxanthellae, and agitated water brings plankton to feed the coral. </p>
+          <p><strong>The off-reef floor</strong> is the shallow sea floor surrounding a reef. This zone occurs next to reefs on continental shelves. Reefs around tropical islands and atolls drop abruptly to great depths and do not have such a floor. Usually sandy, the floor often supports seagrass meadows which are important foraging areas for reef fish. </p>
+          <p><strong>The reef drop-off </strong> is, for its first 50 m, habitat for reef fish who find shelter on the cliff face and plankton in the water nearby. The drop-off zone applies mainly to the reefs surrounding oceanic islands and atolls. </p>
           <p><strong>The reef face</strong> is the zone above the reef floor or the reef drop-off. This zone is often the reef's most diverse area. Coral and calcareous algae provide complex habitats and areas that offer protection, such as cracks and crevices. Invertebrates and epiphytic algae provide much of the food for other organisms.[50] A common feature on this forereef zone is spur and groove formations that serve to transport sediment downslope. </p>
-          <p><strong>The reef flat </strong>is the sandy-bottomed flat, which can be behind the main reef, containing chunks of coral. This zone may border a lagoon and serve as a protective area, or it may lie between the reef and the shore, and in this case is a flat, rocky area. Fish tend to prefer it when it is present.[50]</p>
-          <p><strong>The reef lagoon</strong>is an entirely enclosed region, which creates an area less affected by wave action and often contains small reef patches.[50]</p>
+          <p><strong>The reef flat </strong> is the sandy-bottomed flat, which can be behind the main reef, containing chunks of coral. This zone may border a lagoon and serve as a protective area, or it may lie between the reef and the shore, and in this case is a flat, rocky area. Fish tend to prefer it when it is present.[50]</p>
+          <p><strong>The reef lagoon</strong> is an entirely enclosed region, which creates an area less affected by wave action and often contains small reef patches.[50]</p>
         </artice>
       </section>
       <section>
