--- a/Locations.html
+++ b/Locations.html
@@ -29,7 +29,7 @@
             <li>The world's northernmost individual coral reef is located within a bay of Japan's Tsushima Island in the Korea Strait.[61]</li>
             <li>The world's southernmost coral reef is at Lord Howe Island, in the Pacific Ocean off the east coast of Australia.</li>
           </ul>
-          <fogure>
+          <figure>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Coral_reef_locations.jpg/450px-Coral_reef_locations.jpg" alt="">
             <figcaption>Locations of coral reefs</figcaption>  
           </figure>
