--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Coral reef</title>
+    <base href="https://en.wikipedia.org/">
   </head>
   <body>
     <h1>Coral reef</h1>
-    <a href="https://en.wikipedia.org/wiki/Coral_reef">From Wikipedia, the free encyclopedia</a><hr/>
+    <a href="wiki/Coral_reef">From Wikipedia, the free encyclopedia</a><hr/>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Blue_Linckia_Starfish.JPG/800px-Blue_Linckia_Starfish.JPG" alt="Coral reef" width="250" height="333"> 
     <article>
       <section id="intro-coral">
-        <p>A <strong><em>coral reef</em></strong> is an underwater <a href="https://en.wikipedia.org/wiki/Ecosystem"> ecosystem </a> characterized by reef-building <a href="https://en.wikipedia.org/wiki/Coral">corals</a>. Reefs are formed of colonies of coral polyps held together by calcium carbonate. <strong>Most coral reefs are built from stony corals, whose polyps cluster in groups</strong>.</p>
+        <p>A <strong><em>coral reef</em></strong> is an underwater <a href="wiki/Ecosystem"> ecosystem </a> characterized by reef-building <a href="wiki/Coral">corals</a>. Reefs are formed of colonies of coral polyps held together by calcium carbonate. <strong>Most coral reefs are built from stony corals, whose polyps cluster in groups</strong>.</p>
 
         <p>Coral belongs to the class Anthozoa in the animal phylum Cnidaria, which includes sea anemones and jellyfish. Unlike sea anemones, corals secrete hard carbonate exoskeletons that support and protect the coral. Most reefs grow best in warm, shallow, clear, sunny and agitated water. Coral reefs first appeared 485 million years ago, at the dawn of the Early Ordovician, displacing the microbial and sponge reefs of the Cambrian.[1]</p>
 
