--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Coral reef</title>
-    <base href="https://en.wikipedia.org/">
+    <base href="https://en.wikipedia.org/" target="_blank">
   </head>
   <body>
     <h1>Coral reef</h1>
