--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </article>
     <nav id="menu">
      <ol>
-      <li><a href="Formation.html">Formation</a></il>
-      <li><a href="Types.html">Types</a></li>
-      <li><a href="Zones.html">Zones</a></li>
-      <li><a href="Locations.html">Locations</a></li>
+      <li><a href="./Formation.html">Formation</a></il>
+      <li><a href="./Types.html">Types</a></li>
+      <li><a href="./Zones.html">Zones</a></li>
+      <li><a href="./Locations.html">Locations</a></li>
      </ol>
     </nav>
   </body>
