--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </article>
     <nav id="menu">
      <ol>
-      <li><a href="./Formation.html">Formation</a></il>
+      <li><a href="https://github.com/silveram/Coral-reef/Formation.html">Formation</a></il>
       <li><a href="./Types.html">Types</a></li>
       <li><a href="./Zones.html">Zones</a></li>
       <li><a href="./Locations.html">Locations</a></li>
