--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </article>
     <nav class="menu">
      <ol>
-      <li><a href="Formation.html">Formation</a></il>
-      <li><a href="Types.html">Types</a></li>
-      <li><a href="Zones.html">Zones</a></li>
-      <li><a href="Locations.html">Locations</a></li>
+      <li><a href="Formation.html" target="_blank">Formation</a></il>
+      <li><a href="Types.html" target="_blank">Types</a></li>
+      <li><a href="Zones.html" target="_blank">Zones</a></li>
+      <li><a href="Locations.html" target="_blank">Locations</a></li>
      </ol>
     </nav>
   </body>
