--- a/index.html
+++ b/index.html
@@ -2,33 +2,39 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
-    <title>Coral reef</title>
-     </head>
+    <title>Coral reef</title> 
+	<link rel="stylesheet" type="text/css" href="./style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Alike&family=Arizonia&display=swap" rel="stylesheet"> 
+  </head>
   <body>
     <h1>Coral reef</h1>
-    <a href="wiki/Coral_reef">From Wikipedia, the free encyclopedia</a><hr/>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Blue_Linckia_Starfish.JPG/800px-Blue_Linckia_Starfish.JPG" alt="Coral reef" width="250" height="333"> 
-    <article>
-      <section class="intro-coral">
-        <p>A <strong><em>coral reef</em></strong> is an underwater <a href="https://en.wikipedia.org/wiki/Ecosystem"> ecosystem </a> characterized by reef-building <a href="https://en.wikipedia.org/wiki/Coral">corals</a>. Reefs are formed of colonies of coral polyps held together by calcium carbonate. <strong>Most coral reefs are built from stony corals, whose polyps cluster in groups</strong>.</p>
+    <a href="https://en.wikipedia.org" target=__blank class="source">From Wikipedia, the free encyclopedia</a><br/>
+    <div class="=container"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Blue_Linckia_Starfish.JPG/800px-Blue_Linckia_Starfish.JPG" alt="Coral reef" > </div>
+    <main>
+		<article>
+		  <section class="intro-coral">
+			<p>A <strong><em>coral reef</em></strong> is an underwater <a href="https://en.wikipedia.org/wiki/Ecosystem"> ecosystem </a> characterized by reef-building <a href="https://en.wikipedia.org/wiki/Coral">corals</a>. Reefs are formed of colonies of coral polyps held together by calcium carbonate. <strong>Most coral reefs are built from stony corals, whose polyps cluster in groups</strong>.</p>
 
-        <p>Coral belongs to the class Anthozoa in the animal phylum Cnidaria, which includes sea anemones and jellyfish. Unlike sea anemones, corals secrete hard carbonate exoskeletons that support and protect the coral. Most reefs grow best in warm, shallow, clear, sunny and agitated water. Coral reefs first appeared 485 million years ago, at the dawn of the Early Ordovician, displacing the microbial and sponge reefs of the Cambrian.[1]</p>
+			<p>Coral belongs to the class Anthozoa in the animal phylum Cnidaria, which includes sea anemones and jellyfish. Unlike sea anemones, corals secrete hard carbonate exoskeletons that support and protect the coral. Most reefs grow best in warm, shallow, clear, sunny and agitated water. Coral reefs first appeared 485 million years ago, at the dawn of the Early Ordovician, displacing the microbial and sponge reefs of the Cambrian.[1]</p>
 
-        <p>Sometimes called rainforests of the sea,[2] shallow coral reefs form some of Earth's most diverse ecosystems. They occupy less than <span class="percentage">0.1%</span> of the world's ocean area, about half the area of <span class="location" class="country">France</span>, yet they provide a home for at least <span class="percentage">25%</span> of all marine species,[3][4][5][6] including fish, mollusks, worms, crustaceans, echinoderms, sponges, tunicates and other cnidarians.[7] Coral reefs flourish in ocean waters that provide few nutrients. 
-  
-        They are most commonly found at shallow depths in tropical waters, but deep water and cold water coral reefs exist on smaller scales in other areas.</p>
+			<p>Sometimes called rainforests of the sea,[2] shallow coral reefs form some of Earth's most diverse ecosystems. They occupy less than <span class="percentage">0.1%</span> of the world's ocean area, about half the area of <span class="location" class="country">France</span>, yet they provide a home for at least <span class="percentage">25%</span> of all marine species,[3][4][5][6] including fish, mollusks, worms, crustaceans, echinoderms, sponges, tunicates and other cnidarians.[7] Coral reefs flourish in ocean waters that provide few nutrients. 
+	  
+			They are most commonly found at shallow depths in tropical waters, but deep water and cold water coral reefs exist on smaller scales in other areas.</p>
 
-        <p>Coral reefs have declined by <span class="percentage">50%</span> since <time>1950</time>, partly because they are sensitive to water conditions.[8] They are under threat from excess nutrients (nitrogen and phosphorus), rising temperatures, oceanic acidification, overfishing <span id="e.g">(e.g., from blast fishing, cyanide fishing, spearfishing on scuba)</span>, sunscreen use,[9] and harmful land-use practices, including runoff and seeps <span class="e.g">(e.g., from injection wells and cesspools)</span>.[10][11][12]</p>
+			<p>Coral reefs have declined by <span class="percentage">50%</span> since <time>1950</time>, partly because they are sensitive to water conditions.[8] They are under threat from excess nutrients (nitrogen and phosphorus), rising temperatures, oceanic acidification, overfishing <span id="e.g">(e.g., from blast fishing, cyanide fishing, spearfishing on scuba)</span>, sunscreen use,[9] and harmful land-use practices, including runoff and seeps <span class="e.g">(e.g., from injection wells and cesspools)</span>.[10][11][12]</p>
 
-        <p>Coral reefs deliver ecosystem services for tourism, fisheries and shoreline protection. The annual global economic value of coral reefs has been estimated at anywhere from US$30–375 billion (<time>1997</time> and <time>2003</time> estimates)[13][14] to US$2.7 trillion (a <time>2020</time> estimate)[15] to US$9.9 trillion (a <time>2014</time> estimate).[16] </p>
-      </section> 
-    </article>
-    <nav class="menu">
+			<p>Coral reefs deliver ecosystem services for tourism, fisheries and shoreline protection. The annual global economic value of coral reefs has been estimated at anywhere from US$30–375 billion (<time>1997</time> and <time>2003</time> estimates)[13][14] to US$2.7 trillion (a <time>2020</time> estimate)[15] to US$9.9 trillion (a <time>2014</time> estimate).[16] </p>
+		  </section> 
+		</article>
+    </main>
+	<nav class="menu">
      <ol>
-      <li><a href="Formation.html" target="_blank">Formation</a></il>
-      <li><a href="Types.html" target="_blank">Types</a></li>
-      <li><a href="Zones.html" target="_blank">Zones</a></li>
-      <li><a href="Locations.html" target="_blank">Locations</a></li>
+      <li><a href="Formation.html" target="_blank"class="menu-1">Formation</a></il>
+      <li><a href="Types.html" target="_blank" class="menu-2">Types</a></li>
+      <li><a href="Zones.html" target="_blank" class="menu-3">Zones</a></li>
+      <li><a href="Locations.html" target="_blank" class="menu-4">Locations</a></li>
      </ol>
     </nav>
   </body>
